Fix credits box on ie 8

--- a/app/assets/stylesheets/pageflow/progress_navigation_bar.css.scss
+++ b/app/assets/stylesheets/pageflow/progress_navigation_bar.css.scss
@@ -342,7 +342,6 @@ $progressbar-mobile-width: 14px;
     min-width: 230px;
     min-height: 4px;
     font-family: SourceSansPro;
-    bottom: 0;
 
     a {
       color: $nav-hint-hover-color;
