--- a/app/assets/stylesheets/pageflow/progress_navigation_bar/horizontal.css.scss
+++ b/app/assets/stylesheets/pageflow/progress_navigation_bar/horizontal.css.scss
@@ -41,8 +41,6 @@ $thumbnail-small-width: 50px;
       }
 
       .navigation_credits_box {
-        bottom: initial;
-
         p {
           display: none;
         }
