--- a/app/assets/stylesheets/pageflow/progress_navigation_bar/vertical.css.scss
+++ b/app/assets/stylesheets/pageflow/progress_navigation_bar/vertical.css.scss
@@ -32,6 +32,10 @@
     }
   }
 
+  .navigation_credits_box {
+    bottom: 0;
+  }
+
   .navi_hint {
     @include pageflow-progress-navigation-bar-small-height {
       display: none;
